Fix styling error from previous commit. Logo is now aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,7 @@ footer table {
 
     #logo {
         font-size: 260%;
-        padding: 0;
+        padding: 5px;
     }
 
     /* services */
